--- a/MovieListAssignment/Base.lproj/Main.storyboard
+++ b/MovieListAssignment/Base.lproj/Main.storyboard
@@ -69,7 +69,6 @@
                     <connections>
                         <outlet property="collectionView" destination="cYX-OD-vgT" id="Gdh-Pc-dWa"/>
                         <outlet property="loader" destination="rjc-99-Md8" id="GyN-dz-wyO"/>
-                        <segue destination="30n-tP-Os5" kind="show" identifier="SearchVC" id="bmX-KP-skr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -79,13 +78,13 @@
         <!--Search View Controller-->
         <scene sceneID="BuK-EV-M6r">
             <objects>
-                <viewController id="30n-tP-Os5" customClass="SearchViewController" customModule="MovieListAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchViewController" id="30n-tP-Os5" customClass="SearchViewController" customModule="MovieListAssignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ps0-EB-7bm">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vMm-1c-y1f">
-                                <rect key="frame" x="0.0" y="170" width="393" height="682"/>
+                                <rect key="frame" x="0.0" y="126" width="393" height="726"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hmG-Fp-zi5">
                                     <size key="itemSize" width="128" height="128"/>
@@ -96,7 +95,7 @@
                                 <cells/>
                             </collectionView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zuj-cT-9ys">
-                                <rect key="frame" x="8" y="113" width="377" height="47"/>
+                                <rect key="frame" x="8" y="69" width="377" height="47"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wU0-UK-ep2">
                                         <rect key="frame" x="0.0" y="0.0" width="329" height="47"/>
@@ -121,7 +120,7 @@
                                 </subviews>
                             </stackView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No item found!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyV-YT-rVc">
-                                <rect key="frame" x="125.33333333333333" y="497.33333333333331" width="142.66666666666669" height="27.333333333333314"/>
+                                <rect key="frame" x="125.33333333333333" y="475.33333333333331" width="142.66666666666669" height="27.333333333333314"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
